# guestbook

./: README.md  pyproject.toml
app/: database.py  main.py
app/core/models/: entry.py
app/core/routes/: entries.py
app/core/schemas/: entry.py
tests/: conftest.py  test_entries_api.py
