[tool.poetry]
name = "guestbook"
version = "0.1.0"
description = ""
authors = ["Maya Tagunova <maya.tagunova@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.27"
python-dotenv = "^0.19.2"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
fastapi-pagination = "^0.9.1"
psycopg2 = "^2.9.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
autoflake = "^1.4"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.0"
pre-commit = "^2.8.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
